k8s/backend-ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: a5fa6bc0b51bb4992a37ec1bb0437fc6-963901666.ap-south-1.elb.amazonaws.com # Use your backend ALB DNS here
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
